--- a/consulta_fluxo_caixa.html
+++ b/consulta_fluxo_caixa.html
@@ -13,7 +13,7 @@
             <div>
                 <label for="tipo">Tipo de Consulta:</label>
                 <br><br>
-                <input type="radio" name="tipo" id="t-saldo_total" value="saldo">
+                <input type="radio" name="tipo" id="t-saldo_total" value="saldo" checked>
                 <span>Saldo Total</span>
                 <br>
                 <input type="radio" name="tipo" id="t-saidas" value="saida">
